--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -11,6 +11,8 @@ RUN apt-get update && apt-get install -y libmcrypt-dev libpng-dev mariadb-client
 RUN pecl install redis \
     && docker-php-ext-enable redis
 
+RUN docker-php-ext-install sockets
+
 RUN docker-php-ext-configure exif
 RUN docker-php-ext-install exif
 RUN docker-php-ext-enable exif
